# GamePlan-A_Personalized_Sports_Companion

./: .gitattributes  .gitignore  README.md
.github/workflows/: ci-cd-pipeline.yml
AIRFLOW/: .gitignore  docker-compose.yaml  dockerfile
AIRFLOW/dags/: news.py
Application/: Dockerfile.fastapit  Dockerfile.streamlit  app.py  db_helper.py  main.py  maps_helper.py  pyproject.toml  youtube_helper.py
PlanAndExecute/: pyproject.toml
PlanAndExecute/sports_practice_app/: main.py  maps.py  planner.py  streamlit_app.py  tasks.py  youtube.py
